--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -24,8 +24,9 @@
                     <div class="row">
                         <div class="col">
                             <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
-                                <a class="navbar-brand" href="#"><img class="nav-logo"
-                                                                      src="{% static 'images/logo/logo11.png' %}" alt="Image not found !"></a>
+                                <a class="navbar-brand" href="#">
+                                    <img class="nav-logo" src="{% static 'images/logo/logo11.png' %}" alt="Image not found !">
+                                </a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                         aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
                                             <a class="nav-link" href="{% url 'main_app:index' %}">{% trans "Home" %}</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="{% url 'main_app:contact' %}">Contact</a>
+                                            <a class="nav-link" href="{% url 'main_app:contact' %}">{% trans "Contact" %}</a>
                                         </li>
                                     </ul>
                                     {% if user.is_authenticated %}
@@ -47,7 +48,11 @@
                                             Welcome {{ user }}
                                         </li>
                                     </ul>
-                                    <a href="edit_profile.html" class="btn btn-primary md-mx-none">Edit Profile</a>
+                                        {% if user.is_developer %}
+                                            <a href="{% url 'accounts:developer-profile' %}" class="btn btn-primary md-mx-none">Edit Profile</a>
+                                         {% else %}
+                                            <a href="{% url 'accounts:client-profile' %}" class="btn btn-primary md-mx-none">Edit Profile</a>
+                                         {% endif %}
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'accounts:logout' %}">Sign Out</a>
                                     </li>
