--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -98,7 +98,7 @@
                     <div class="widget widget_contact bg-white border p-30 shadow-one rounded mb-30">
                         <h5 class="mb-4">{% trans "Invit a Friend" %}</h5>
                         <p>Just copy the link and send it to you friend</p>
-                        <p>{% fullurl 'main_app:ref-subscribe' project.pk user.code %}</p>
+                        <p>{% fullurl 'main_app:ref-subscribe' project.pk user.pk %}</p>
                     </div>
                 </div>
                 <div class="col-xl-8 order-xl-1">
