add updates template as send by shahd

--- a/templates/dashboards/project_main_phases.html
+++ b/templates/dashboards/project_main_phases.html
@@ -30,7 +30,7 @@
                                 </div>
                             </td>
                             <td>
-                                <a href="{% url 'main:main-phase-details' phase.project_id phase.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-edit"></i></a>
+                                <a href="{% url 'main:sub-phase' phase.project_id phase.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-edit"></i></a>
 {#                                <a href="{% url 'main:main-phase-delete' phase.project_id phase.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-trash"></i></a>#}
                             </td>
                         </tr>
