--- a/templates/main/phases.html
+++ b/templates/main/phases.html
@@ -1,5 +1,5 @@
 {% extends 'main/main_base.html' %}
-{% load static i18n %}
+{% load static i18n crispy_forms_tags %}
 
 {% block page_header %}
     <div class="full-row">
@@ -45,103 +45,54 @@
                                 <div class="tab-simple tab-action">
                                     <div class="property-overview border rounded bg-white p-30 mb-30">
                                         <div class="px-4 py-3">
+                                        <div class="col-md-12 mb-20">
+                                            <form action="{% url "main_app:add-updates" project.pk main_phase.pk sub_phase.pk %}" method="post">
+                                                {% csrf_token %}
+                                                {{ addForm|crispy }}
+                                                <button type="submit" class="btn btn-primary" name="submitbasic">
+                                                {% trans "Add Update" %}
+                                                </button>
+                                            </form>
+                                        </div>
                                             <table class="w-100 items-list bg-transparent">
                                                 <thead>
                                                 <tr class="bg-white">
-                                                    <th>My Update <a href="#"
-                                                                     class="text-primary me-4 mb-1"><i
-                                                            class="fas fa-plus"></i> </a></th>
-                                                    <th>Added Date</th>
-                                                    <th>Views</th>
-                                                    <th>Action</th>
+                                                    <th>{% trans "My Update" %}
+                                                        <a href="#" class="text-primary me-4 mb-1">
+                                                            <i class="fas fa-plus"></i>
+                                                        </a>
+                                                    </th>
+                                                    <th>{% trans "Added Date" %}</th>
+                                                    <th>{% trans "Action" %}</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
-                                                <tr>
-                                                    <td>
-                                                        <div class="property-info d-table">
-                                                            <p>We have now started the first phase
-                                                                of<br> developing the real estate
-                                                                project. <br>At this stage, the soil
-                                                                will be improved for construction,
-                                                            </p>
+                                                {% for update in updates %}
+                                                    <tr>
+                                                        <td>
+                                                            <div class="property-info d-table">
+                                                                <p>{{ update.description }}</p>
+                                                                {% for image in update.attachments.update_file %}
+                                                                    <img src="{{ image.url }}"
+                                                                     width="150"
+                                                                     height="100" class="img-thumbnail"
+                                                                     alt="real estate template">
+                                                                {% endfor %}
+                                                            </div>
+                                                        </td>
+                                                        <td>{{ update.update_date }}</td>
+                                                        <td>
+                                                            <a href="#" class="text-primary me-4 mb-1">
+                                                                <i class="fas fa-edit"></i>
+                                                            </a>
+                                                            <a href="#" class="text-primary mb-1">
+                                                                <i class="fas fa-trash"></i></a>
+                                                        </td>
 
-
-                                                            <img src="assets/images/property_grid/l9.png"
-                                                                 width="150"
-                                                                 height="100" class="img-thumbnail"
-                                                                 alt="real estate template"> <img
-                                                                src="assets/images/property_grid/l7.png"
-                                                                width="150"
-                                                                height="100" class="img-thumbnail"
-                                                                alt="real estate template">
-                                                            <img src="assets/images/property_grid/l8.png"
-                                                                 width="150"
-                                                                 height="100" class="img-thumbnail"
-                                                                 alt="real estate template">
-                                                        </div>
-                                                    </td>
-                                                    <td>10 Jan, 2019</td>
-                                                    <td>34</td>
-                                                    <td>
-                                                        <a href="#" class="text-primary me-4 mb-1"><i
-                                                                class="fas fa-edit"></i></a>
-                                                        <a href="#" class="text-primary mb-1"><i
-                                                                class="fas fa-trash"></i></a>
-                                                    </td>
-
-                                                </tr>
-                                                <div class="col-md-12 mb-20">
-                                                    <label class="mb-2 font-fifteen font-500">Update
-                                                        Title</label>
-                                                    <input class="form-control" name="title"
-                                                           type="text">
-                                                </div>
-                                                <div class="col-md-12 mb-20">
-                                                    <label class="mb-2 font-fifteen font-500">Description</label>
-                                                    <textarea class="form-control" rows="5"
-                                                              name="description"></textarea>
-                                                </div>
-                                                <div class="col-md-12 mb-20">
-                                                    <button class="btn btn-primary" name="submitbasic">
-                                                        Save Information
-                                                    </button>
-                                                </div>
-
-                                                <tr>
-                                                    <td>
-                                                        <!--                                                            <img class="rounded" src="assets/images/thumbnaillist/02.jpg" alt="">-->
-                                                        <div class="property-info d-table">
-                                                            <p>We have now started the first phase
-                                                                of<br> developing the real estate
-                                                                project. <br>At this stage, the soil
-                                                                will be improved for construction,
-                                                            </p>
-
-
-                                                            <img src="assets/images/property_grid/l9.png"
-                                                                 width="150"
-                                                                 height="100" class="img-thumbnail"
-                                                                 alt="real estate template"> <img
-                                                                src="assets/images/property_grid/l7.png"
-                                                                width="150"
-                                                                height="100" class="img-thumbnail"
-                                                                alt="real estate template">
-                                                            <img src="assets/images/property_grid/l8.png"
-                                                                 width="150"
-                                                                 height="100" class="img-thumbnail"
-                                                                 alt="real estate template">
-                                                        </div>
-                                                    </td>
-                                                    <td>10 Jan, 2019</td>
-                                                    <td>34</td>
-                                                    <td>
-                                                        <a href="#" class="text-primary me-4 mb-1"><i
-                                                                class="fas fa-edit"></i></a>
-                                                        <a href="#" class="text-primary mb-1"><i
-                                                                class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
+                                                    </tr>
+                                                {% empty %}
+                                                    {% trans "There are no updates" %}
+                                                {% endfor %}
                                                 </tbody>
                                             </table>
                                         </div>
