--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -68,9 +68,23 @@
                 </div>
             </div>
         </header>
+
+
+
+            {% if messages %}
+                <div class="col-12">
+                    {% for message in messages %}
+                        <div{% if message.tags %} class="{{ message.tags }}"{% endif %} role="success">
+                          <span><strong>{{ message }}</span>
+{#                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>#}
+                        </div>
+                    {% endfor %}
+                </div>
+            {% endif %}
         <!--============== Header Section End ==============-->
+
         {% block page_header %}
-        
+
         {% endblock page_header %}
 
         <!--============== Property Grid View Start ==============-->
