--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -74,7 +74,7 @@
             {% if messages %}
                 <div class="col-12">
                     {% for message in messages %}
-                        <div{% if message.tags %} class="{{ message.tags }}"{% endif %} role="success">
+                        <div{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %} role="success">
                           <span><strong>{{ message }}</span>
 {#                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>#}
                         </div>
