--- a/templates/dashboards/project_images_upload.html
+++ b/templates/dashboards/project_images_upload.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col mb-30">
             <div class="border rounded bg-white p-30">
-                <dev class="row">
+                <div class="row">
                     <div class="col-md-12 mt-20">
                         <ul class="row row-cols-xl-6 row-cols-md-3 row-cols-2 media-upload">
                             {% for image in project.project_images.all %}
@@ -23,7 +23,7 @@
                             {% endfor %}
                         </ul>
                     </div>
-                </dev>
+                </div>
                 <form method="POST" class="form-boder" enctype="multipart/form-data">
                     <div class="form-row">
                         <div class="col-md-12 mb-20">
