--- a/templates/dashboards/project_update_base.html
+++ b/templates/dashboards/project_update_base.html
@@ -27,7 +27,7 @@
                         <a href="{% url 'main_app:create-main-phase' project.pk as main_phases_url %}{{ main_phases_url }}" class="nav-link btn{% if request.get_full_path|is_similar:main_phases_url %} btn-primary text-white{% endif %}">3. {% trans 'Project Main Phases' %}</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'main_app:upload-image' project.pk as sub_phases_url %}{{ sub_phases_url }}" class="nav-link btn{% if request.get_full_path == sub_phases_url %} btn-primary text-white{% endif %}">4. {% trans 'Project Sub-Phases' %}</a>
+                        <a href="{% url 'main_app:create-sub-phase' project.pk as sub_phases_url %}{{ sub_phases_url }}" class="nav-link btn{% if request.get_full_path|is_similar:sub_phases_url %} btn-primary text-white{% endif %}">4. {% trans 'Project Sub-Phases' %}</a>
                     </li>
                 </ul>
             </div>
