--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <!-- Required style of the theme -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
@@ -44,6 +47,8 @@
 {% endblock body %}
 
     <!-- Javascript Files -->
+
+
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/greensock.js' %}"></script>
     <script src="{% static 'js/layerslider.transitions.js' %}"></script>
