--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -68,25 +68,26 @@
                 </div>
             </div>
         </header>
-
-
-
-            {% if messages %}
-                <div class="col-12">
-                    {% for message in messages %}
-                        <div{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %} role="success">
-                          <span><strong>{{ message }}</span>
-{#                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>#}
-                        </div>
-                    {% endfor %}
+        {% if messages %}
+        <div class="container">
+            {% for message in messages %}
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <div{% if message.tags %} class="alert alert-{{ message.tags }} alert-dismissible fade show"{% endif %} role="success">
+                        <strong>{{ message.tags }}</strong> {{ message }}.
+                        <a href="#" style="float: right" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    </div>
                 </div>
-            {% endif %}
+                <div class="col-1"></div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
         <!--============== Header Section End ==============-->
-
         {% block page_header %}
 
         {% endblock page_header %}
-
         <!--============== Property Grid View Start ==============-->
         <div class="full-row pt-0">
             <div class="container">
