--- a/templates/dashboards/dashboard_base.html
+++ b/templates/dashboards/dashboard_base.html
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-md-4 col-lg-3 col-xl-2 px-0">
                     <div class="dashboard-nav-area bg-secondary pt-4">
-                        <a class="navbar-brand d-table px-40 py-3 mb-3" href="index.html">
+                        <a class="navbar-brand d-table px-40 py-3 mb-3" href="{% url "main_app:index" %}">
                             <img src="{% static 'images/logo/logo11.png' %}" alt="dashboard logo"></a>
                         <div class="collaps-dashboard m-3 px-3 rounded bg-white text-secondary clearfix d-md-none">
                             <span>{% trans "Open Dashboard Navigation" %}</span>
@@ -62,6 +62,13 @@
                         </div>
                         <nav class="dashboard-nav nav-light pb-3" id="navbarSupportedContent">
                             <ul class="navbar-nav left-collaps-nav">
+                                <li class="text-white pb-2 pt-4 px-20">{% trans "Projects Administration" %}</li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url "main_app:my-project-list" %}">
+                                        <i class="fa fa-building flat-mini pe-2"></i>
+                                        {% trans "My Properties" %}
+                                    </a>
+                                </li>
                                 <li class="text-white pb-2 pt-4 px-20">{% trans "Account Settings" %}</li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'accounts:developer-profile' %}">
@@ -81,24 +88,6 @@
                                         {% trans "Logout" %}
                                     </a>
                                 </li>
-                                <li class="text-white pb-2 pt-4 px-20">{% trans "Projects Administration" %}</li>
-                                <li class="nav-item db-dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#">
-                                        <i class="flaticon-home flat-mini pe-2"></i>
-                                        {% trans "My Properties" %}
-                                    </a>
-                                    <ul class="db-dropdown-menu">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="{% url "main_app:my-project-list" %}">{% trans "Projects Listing" %}</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">{% trans "Edit Project" %}</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">{% trans "Delete Project" %}</a>
-                                        </li>
-                                    </ul>
-                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -116,7 +105,6 @@
                                                 <ul class="navbar-nav sm-mx-none">
                                                     <li class="nav-item">
                                                         <a class="nav-link" href="#">{% trans "Dashboard" %}</a>
-
                                                     </li>
                                                 </ul>
                                                 <ul class="navbar-nav user-option">
@@ -141,7 +129,6 @@
                             {% block main_containt %}
 
                             {% endblock main_containt %}
-
                         </div>
                     </div>
                     <!--============== Dashboard End ==============-->
@@ -150,7 +137,7 @@
                     <div class="full-row pt-0 pb-5">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="col-12 text-center"><span>© 2022 Uniland All right reserved</span></div>
+                                <div class="col-12 text-center"><span>© 2022 All right reserved</span></div>
                             </div>
                         </div>
                     </div>
